--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Lemon</title>
-    <link rel="stylesheet" href="css/media_queries.css">
-    <link rel="stylesheet" href="css/styles2.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/java.js" defer></script> 
-    <script src="/js/corrousel.js" defer></script> 
+    <link rel="stylesheet" href="https://clorostica.github.io/LittleLemon/css/media_queries.css">
+    <link rel="stylesheet" href="https://clorostica.github.io/LittleLemon/css/styles2.css">
+    <link rel="stylesheet" href="https://clorostica.github.io/LittleLemon/css/styles.css">
+    <script src="https://clorostica.github.io/LittleLemon/js/java.js" defer></script> 
+    <script src="https://clorostica.github.io/LittleLemon/js/corrousel.js" defer></script> 
 </head>
 <body>
     <header>  
         <nav class="nav contenedor">
             <div class="divmenu contenedor">
-                <img class="logo" src="/img/logo.png" id="logo">
+                <img class="logo" src="https://clorostica.github.io/LittleLemon/img/logo.png" id="logo">
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
@@ -35,12 +35,12 @@
                 <li class="nav__items">
                     <button class="menubutton2">Reservations</button>
                 </li>
-                        <img src="./img/close.svg" class="nav__close">
+                        <img src="https://clorostica.github.io/LittleLemon/img/close.svg" class="nav__close">
                 </ul>
             <div class="nav__menu">
-                <img src="./img/menu.svg" class="nav__img">
+                <img src="https://clorostica.github.io/LittleLemon/img/menu.svg" class="nav__img">
             </div>
-                <img src="./img/close.svg" class="nav__close">
+                <img src="https://clorostica.github.io/LittleLemon/img/close.svg" class="nav__close">
             </ul>
         </nav>
     </header>
@@ -52,21 +52,21 @@
         <main>
         <section>
             <article>
-                <img class="section_img" src="/img/foodex.jpg" alt="our_menu">
+                <img class="section_img" src="https://clorostica.github.io/LittleLemon/img/foodex.jpg" alt="our_menu">
                 <h2>Our New Menu</h2>
                 <p>Lorem ipsum dolor sit amet, henderit dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
             </article>
         </section>
         <section>
             <article>
-                <img class="section_img" src="/img/chef.jpg" alt="book">
+                <img class="section_img" src="https://clorostica.github.io/LittleLemon/img/chef.jpg" alt="book">
                 <h2>Book a table</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tnt, sunt in culpa.</p>
             </article>
         </section>
         <section>
             <article>
-                <img class="section_img" src="/img/cloup.jpg" alt="book">
+                <img class="section_img" src="https://clorostica.github.io/LittleLemon/img/cloup.jpg" alt="book">
                 <h2>Work With us</h2>
                 <p>Lorem ipsum dolis nostrudut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
             </article>
@@ -75,28 +75,28 @@
     <div class="carousel">
         <div class="carousel-container">
             <div class="carousel-post ">
-                <img src="img/carousel1.jpg" style="width:100%" alt="Image 1">
+                <img src="https://clorostica.github.io/LittleLemon/img/carousel1.jpg" style="width:100%" alt="Image 1">
                 <div class="carousel-text">
                     <h1>Order home delivery</h1>
                     <button class="menubutton1"> Order here</button>
                 </div>
             </div>
             <div class="carousel-post ">
-                <img src="img/carousel2.jpeg" style="width:100%" alt="Image 2">
+                <img src="https://clorostica.github.io/LittleLemon/img/carousel2.jpeg" style="width:100%" alt="Image 2">
                 <div class="carousel-text">
                     <h1>Order home delivery</h1>
                     <button class="menubutton1"> Order here</button>
                 </div>
             </div>
             <div class="carousel-post">
-                <img src="img/carousel3.jpg" style="width:100%" alt="Image 3">
+                <img src="https://clorostica.github.io/LittleLemon/img/carousel3.jpg" style="width:100%" alt="Image 3">
                 <div class="carousel-text">
                     <h1>Order home delivery</h1>
                     <button class="menubutton1"> Order here</button>
                 </div>
             </div>
             <div class="carousel-post">
-                <img src="img/carousel4.jpeg" style="width:100%" alt="Image 4">
+                <img src="https://clorostica.github.io/LittleLemon/img/carousel4.jpeg" style="width:100%" alt="Image 4">
                 <div class="carousel-text">
                     <h1>Order home delivery</h1>
                     <button class="menubutton1"> Order here</button>
@@ -107,7 +107,7 @@
         <main>
         <section>
             <article>
-                <img class="section_img" src="/img/velero-calle-80-4.webp" alt="our_menu">
+                <img class="section_img" src="https://clorostica.github.io/LittleLemon/img/velero-calle-80-4.webp" alt="our_menu">
                 <h2>Fall Flavors,
                     True Moments</h2>
                 <p>our seasonal favorites are back, along with new dishes crafted with a True twist..</p>
@@ -116,7 +116,7 @@
         </section>
         <section>
             <article>
-                <img class="section_img" src="/img/comida.jpg" alt="book">
+                <img class="section_img" src="https://clorostica.github.io/LittleLemon/img/comida.jpg" alt="book">
                 <h2>Happy Hour</h2>
                 <p>Join us from 3-6pm, M-F for handcrafted cocktails, bites, and more
                     starting at just $4</p>
@@ -125,7 +125,7 @@
         </section>
         <section>
             <article>
-                <img class="section_img" src="/img/comida2.jpg" alt="book">
+                <img class="section_img" src="https://clorostica.github.io/LittleLemon/img/comida2.jpg" alt="book">
                 <h2>Holidays Made True</h2>
                 <p>Let us handle the cooking so you can enjoy an unforgettable event!</p>
                 <button class="menubutton2">Reserve now </button>
@@ -135,7 +135,7 @@
     <footer class="footer">
         <section class="footer__container contenedor">
             <nav class="nav nav--footer">
-                <img class="footer__img" src="img/logo.png"></img>
+                <img class="footer__img" src="https://clorostica.github.io/LittleLemon/img/logo.png"></img>
 
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items hover-underline-animation">
@@ -165,7 +165,7 @@
             <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" style="fill: #F4CE13;transform: ;msFilter:;"><path d="M12.001 2.002c-5.522 0-9.999 4.477-9.999 9.999 0 4.99 3.656 9.126 8.437 9.879v-6.988h-2.54v-2.891h2.54V9.798c0-2.508 1.493-3.891 3.776-3.891 1.094 0 2.24.195 2.24.195v2.459h-1.264c-1.24 0-1.628.772-1.628 1.563v1.875h2.771l-.443 2.891h-2.328v6.988C18.344 21.129 22 16.992 22 12.001c0-5.522-4.477-9.999-9.999-9.999z"></path></svg></a> 
         </div>
         <h3 class="footer__copyright">Derechos reservados Claudia Saez</h3>
-        <script src="./js/menu.js"></script>
+        <script src="https://clorostica.github.io/LittleLemon/js/menu.js"></script>
     </footer>
 </body>
 </html>
